.k8s/data/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-data
  namespace: iot-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-data
  template:
    metadata:
      labels:
        app: iot-data
    spec:
      containers:
      - name: iot-data
        image: ghcr.io/raghiba/iot-telemetry-data:latest
        ports:
        - containerPort: 8083
