.k8s/data/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-data
  namespace: iot-telemetry
spec:
  selector:
    app: iot-data
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8083
  type: ClusterIP
